@@ -1,0 +1,9 @@
+{
+  "type" : "typeref",
+  "name" : "UnionArrayTyperef",
+  "namespace" : "com.linkedin.pegasus.generator.test",
+  "ref"  : {
+    "type" : "array",
+    "items" : "UnionTyperef"
+  }
+}
