@@ -1,0 +1,6 @@
+{
+  "type" : "typeref",
+  "name" : "UnionTyperef",
+  "namespace" : "com.linkedin.pegasus.generator.test",
+  "ref"  : [ "Date", "CustomPoint" ]
+}
